#pragma once

#include "EntityManager.hpp"

class World {
    EntityManager entity_manager;
};